checkpiont: train base models

--- a/task1/notebooks/03_base_models.ipynb
+++ b/task1/notebooks/03_base_models.ipynb
@@ -2124,12 +2124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ee5eaee8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saving both models for hyperparamter tuning\n",
+    "# Saving both models for hyperparamter optimization\n",
     "import pickle\n",
     "\n",
     "with open(\"../artifacts/rf_base_v1.pkl\", \"wb\") as file:\n",
