checkpoint: set params before tuning

--- a/task1/notebooks/03_base_models.ipynb
+++ b/task1/notebooks/03_base_models.ipynb
@@ -442,18 +442,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b54fc2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Separating training and test sets into features and labels\n",
-    "# X_train, y_train = train.drop([\"quality\"], axis=1).values, train[\"quality\"].values\n",
-    "# X_test, y_test = test.drop([\"quality\"], axis=1).values, test[\"quality\"].values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "17b4a216",
    "metadata": {},
@@ -2129,7 +2117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Saving both models for hyperparamter optimization\n",
+    "# Saving both modelsS\n",
     "import pickle\n",
     "\n",
     "with open(\"../artifacts/rf_base_v1.pkl\", \"wb\") as file:\n",
