--- a/task1/notebooks/03_base_models.ipynb
+++ b/task1/notebooks/03_base_models.ipynb
@@ -1284,6 +1284,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630a35c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Plot ROC-AUC"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ddf4e778",
    "metadata": {},
@@ -2100,6 +2110,16 @@
     "plt.title(\"LightGBM Confusion Matrix\", fontsize=14, fontweight=\"bold\")\n",
     "plt.savefig(\"../img/lgbm-confusion-matrix.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1c3bd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Plot ROC-AUC"
    ]
   },
   {
